--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.4",
     "firebase": "^10.12.0",
     "flowbite-react": "^0.9.0",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
