--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon api/server.js",
-    "start": "node api/server.js"
+    "start": "node api/server.js",
+    "build": "npm insta;; && npm install --prefix  client && npm run build --prex client"
   },
   "keywords": [],
   "author": "",
