--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon api/server.js",
     "start": "node api/server.js",
-    "build": "npm insta;; && npm install --prefix  client && npm run build --prex client"
+    "build": "npm install && npm install --prefix  client && npm run build --prex client"
   },
   "keywords": [],
   "author": "",
